--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
 
+$mainColor: #2ecc71;
+
 html {
   scroll-behavior: smooth;
 }
@@ -17,11 +19,6 @@ section {
   align-items: center;
 }
 
-section:first-child {
-  padding-top: 0;
-  display: block;
-}
-
 .heading {
   text-align: center;
 }
@@ -31,21 +28,47 @@ section:first-child {
   text-align: center;
 }
 
+.ideas-cards,
+.recipes-cards,
+.articles-cards {
+  margin: 50px 0;
+}
+
+.card {
+  margin-bottom: 30px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card-shadow {
+  box-shadow: 5px 5px 20px rgba(53, 110, 173, 0.2);
+}
+
+.header {
+  .menu {
+    padding: 20px;
+    box-shadow: 5px 10px 20px rgba(53, 110, 173, 0.2);
+
+    .logo {
+      margin-right: 36%;
+    }
+  }
+}
+
 .page-item.active .page-link {
-  background-color: #2ecc71;
-  border-color: #2ecc71;
+  background-color: $mainColor;
+  border-color: $mainColor;
 }
 
 .page-link,
 .page-link:hover {
-  color: #2ecc71;
+  color: $mainColor;
 }
 
 .top {
-  .logo {
-    width: 35%;
-  }
-
   .name-brand {
     font-family: 'Dancing Script', sans-serif;
   }
@@ -58,10 +81,16 @@ section:first-child {
   .top-content {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     min-height: 25vh;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 70px;
+
+    &-logo {
+      font-size: 5em;
+      margin-bottom: 30px;
+    }
 
     &-title {
       text-align: center;
@@ -70,6 +99,8 @@ section:first-child {
 
     &-name-brand {
       font-size: 64px;
+      display: inline-block;
+      margin-bottom: 20px;
     }
   }
 
@@ -90,27 +121,9 @@ section:first-child {
   }
 }
 
-.ideas {
-  &-cards {
-    margin: 50px 0;
-  }
-}
-
-.recipes {
-  &-cards {
-    margin: 50px 0;
-  }
-}
-
-.articles {
-  &-cards {
-    margin: 50px 0;
-  }
-}
-
 .footer {
   margin-top: 100px;
-  background-color: #2ecc71;
+  background-color: $mainColor;
   color: #fff;
 
   &-content {
@@ -145,7 +158,7 @@ section:first-child {
 }
 
 @media (max-width: 767px) {
-  .card-margin {
+  .col {
     margin-bottom: 30px;
   }
 }
