--- a/style.scss
+++ b/style.scss
@@ -134,7 +134,6 @@ section {
 
     .contacts {
       margin-top: 30px;
-      margin-bottom: 30px;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
@@ -142,12 +141,33 @@ section {
 
       &-data {
         width: 200px;
-        margin-bottom: 30px;
 
         &-list {
           padding: 0;
           list-style-type: none;
         }
+      }
+    }
+
+    .social-buttons {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      margin-bottom: 30px;
+
+      .social-button {
+        padding: 10px;
+        transition: transform 0.2s ease-in-out;
+        margin-right: 15px;
+      }
+
+      .social-button:last-child {
+        margin-right: 0;
+      }
+
+      .social-button:hover {
+        transform: scale(1.1);
       }
     }
   }
